Set positions of objects so other objects don't move if 1 object is clicked.

--- a/basic.html
+++ b/basic.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <div class="container">
-    <div data-key="rock" class="choice"></div>
-    <div data-key="paper" class="choice"></div>
-    <div data-key="scissors" class="choice"></div>
+    <img data-key="rock" class="choice"></img>
+    <img data-key="paper" class="choice"></img>
+    <img data-key="scissors" class="choice"></img>
   </div>
   <div class="scores">
     <div data-key="player" class="score>"></div>
