Adding html and css code for results text and player/cpu score box below rps choice images.

--- a/basic.html
+++ b/basic.html
@@ -11,9 +11,14 @@
     <img data-key="paper" class="choice"></img>
     <img data-key="scissors" class="choice"></img>
   </div>
+  <div class="outcomes">
+    <p data-key="outcome">Results</p>
+  </div>
   <div class="scores">
-    <div data-key="player" class="score>"></div>
-    <div data-key="opponent" class="scroe>"></div>
+    <p>Player</p>
+    <p data-key="player" class="score>">0</p>
+    <p data-key="opponent" class="score>">0</p>
+    <p>Opponent</p>
   </div>
 </body>
 <script src="script.js"></script>
