Adding the javascript logic to update score & result text. Also cleaned up some of the commented out code.

--- a/basic.html
+++ b/basic.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <div class="container">
-    <img data-key="rock" class="choice"></img>
-    <img data-key="paper" class="choice"></img>
-    <img data-key="scissors" class="choice"></img>
+    <img data-key="rock" class="choice" onclick="imgClicked(this)"></img>
+    <img data-key="paper" class="choice" onclick="imgClicked(this)"></img>
+    <img data-key="scissors" class="choice" onclick="imgClicked(this)"></img>
   </div>
   <div class="outcomes">
     <p data-key="outcome">Results</p>
